--- a/templates.html
+++ b/templates.html
@@ -1,29 +1,31 @@
 <template name="pagination">
-    <div id="{{id}}" class="pagination pagination-{{mode}}">
+    {{#if total}}
+        <div id="{{id}}" class="pagination pagination-{{mode}}">
 
-        {{#if isDefaultMode}}
-        <button name="first-page" type="button" disabled="{{disablePrevious}}">{{first}}</button>
-        <button name="previous-page" type="button" disabled="{{disablePrevious}}">{{previous}}</button>
-        <button name="current-page">{{page}}/{{pageCount}}</button>
-        <button name="next-page" type="button" disabled="{{disableNext}}">{{next}}</button>
-        <button name="last-page" type="button" disabled="{{disableLast}}">{{last}}</button>
-        {{/if}}
+            {{#if isDefaultMode}}
+                <button name="first-page" type="button" disabled="{{disablePrevious}}">{{first}}</button>
+                <button name="previous-page" type="button" disabled="{{disablePrevious}}">{{previous}}</button>
+                <button name="current-page">{{page}}/{{pageCount}}</button>
+                <button name="next-page" type="button" disabled="{{disableNext}}">{{next}}</button>
+                <button name="last-page" type="button" disabled="{{disableLast}}">{{last}}</button>
+            {{/if}}
 
-        {{#if isImageMode}}
-        <img name="first-page" src="{{firstSrc}}">
-        <img name="previous-page" src="{{previousSrc}}">
-        <span name="current-page">{{page}}/{{pageCount}}</span>
-        <img name="next-page" src="{{nextSrc}}">
-        <img name="last-page" src="{{nextSrc}}">
-        {{/if}}
+            {{#if isImageMode}}
+                <img name="first-page" src="{{firstSrc}}">
+                <img name="previous-page" src="{{previousSrc}}">
+                <span name="current-page">{{page}}/{{pageCount}}</span>
+                <img name="next-page" src="{{nextSrc}}">
+                <img name="last-page" src="{{nextSrc}}">
+            {{/if}}
 
-        {{#if isCustomMode}}
-        <span name="first-page"></span>
-        <span name="previous-page"></span>
-        <span name="current-page">{{page}}/{{pageCount}}</span>
-        <span name="next-page"></span>
-        <span name="last-page"></span>
-        {{/if}}
+            {{#if isCustomMode}}
+                <span name="first-page"></span>
+                <span name="previous-page"></span>
+                <span name="current-page">{{page}}/{{pageCount}}</span>
+                <span name="next-page"></span>
+                <span name="last-page"></span>
+            {{/if}}
 
-    </div>
+        </div>
+    {{/if}}
 </template>
